fix alignemnt of external link icon

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -741,8 +741,9 @@ details div {
   margin-bottom: 0px;
 
   i {
-    // font-size: 80%;
     font-size: $smaller-font-size;
+    display: inline-flex;
+    vertical-align: middle;
   }
 }
 
